<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity"
    tools:ignore="AlwaysShowAction">
    <group android:id="@+id/group_normal_mode">

        <item
            android:id="@+id/action_add_drawing"
            android:icon="@drawable/ic_add_drawing_24"
            android:title="@string/add_drawing"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_add_text"
            android:icon="@drawable/ic_add_text_24"
            android:title="@string/add_text"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_start_delete_mode"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/start_delete"
            app:showAsAction="ifRoom" />


    </group>
    <group android:id="@+id/group_delete_mode">
        <item
            android:id="@+id/action_end_delete_mode"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/delete"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_cancel_delete_mode"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/cancel"
            app:showAsAction="always" />
    </group>
</menu>
