<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity"
    tools:ignore="AlwaysShowAction">
    <group android:id="@+id/group_normal_mode">

        <item
            android:id="@+id/action_bold"
            android:icon="@drawable/ic_format_bold_24"
            android:title="@string/bold"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_italic"
            android:icon="@drawable/ic_format_italic_24"
            android:title="@string/italic"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_undo"
            android:icon="@drawable/ic_undo_24"
            android:title="@string/undo"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete"
            android:visible="false"
            app:showAsAction="ifRoom" />


    </group>

</menu>
