<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/normal_dimen">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_dimen"
            android:text="@string/create_new"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutFolderName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_dimen">

            <EditText
                android:id="@+id/edtFolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_dimen"
                android:layout_marginTop="@dimen/standard_dimen"
                android:layout_marginBottom="@dimen/standard_dimen"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="@dimen/normal_dimen"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_dimen"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="@dimen/normal_dimen"
                android:text="@string/save"
                android:textColor="@color/colorAccent" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
</layout>
